--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 
 body h1 {
   font-family: 'Inter', sans-serif !important;
-  font-style: normal;
+  font-style: no;
   color: black;
   margin-bottom: 20px;
 }
@@ -60,25 +60,11 @@ body .card-items p {
   margin-left: 50px;
 }
 
-.cs-card {
+.swag {
+  margin-top: 100px;
   background-color: black;
   color: white;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) !important;
-}
-
-.cs-items h3 {
-  margin-left: 10px;
-  margin-top: 20px;
-}
-
-.cs-items p {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.cs-items .btn {
-  margin-left: 135px;
-  margin-bottom: 20px;
 }
 
 .btn-dark:hover{
@@ -129,63 +115,4 @@ body p {
   font-style: normal;
   font-size: 21.33px;
   font-weight: 400;
-}
-
-/* PreLoader Disc Animation */
-
-.disappear {
-  animation: vanish 1s forwards;
-}
-
-@keyframes vanish {
-  100%{
-      opacity: 0;
-      visibility: hidden;
-  }
-}
-
-div .disc {
-perspective: 500px;	
-  position: fixed;
-display: flex;
-  background-color: white;
-justify-content: center;
-flex-direction: column;
-align-items: center;
-height: 100vh;
-}
-
-.disc {
-  margin-left: 900px;
-width: 200px;
-height: 200px;
-border-radius: 100%;
-background: transparent;
-border: 3px solid rgb(0, 0, 0);
-color: blue;
-font-size: 20px;
-transform: rotateY(0deg);
-animation: rotateAnimation 5s linear infinite;
-}
-
-.preLoader {
-  background-color: white;
-  height: 100vh;
-  position: fixed;
-}
-
-@keyframes rotateAnimation {
-0% {transform: rotateY(0deg) rotateZ(0deg);}
-50% {transform: rotateY(180deg) rotateZ(5deg);}
-100% {transform: rotateY(360deg) rotateZ(0deg);}
-}
-
-.webpage {
-  display: none;
-}
-
-@media (max-width: 600){
-  .cs-card {
-    margin-bottom: 30px;
-  }
 }
